--- a/package.json
+++ b/package.json
@@ -2,19 +2,34 @@
   "name": "syaa-cli",
   "version": "1.0.0",
   "private": true,
-  "description": "Syncope Alarm for Alones",
+  "description": "Client for Syaa: Syncope Alarm for Alones",
   "repository": "https://github.com/widh/syaa-cli.git",
   "license": "MPL-2.0",
   "author": "Jio <jio@widh.me>",
+  "main": "syaa.js",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
   "scripts": {
+    "pack": "yarn pack-electron-all",
+    "pack-all": "electron-packager . Syaa --all --overwrite --out ./out",
+    "pack-win": "electron-packager . Syaa --platform=win32 --overwrite --out ./out",
+    "mi": "yarn make-installer",
+    "mi-all": "yarn make-installer-all",
+    "mi-win": "yarn make-installer-win",
+    "make-installer": "yarn make-installer-all",
+    "make-installer-all": "",
+    "make-installer-win": "",
     "build": "ember build",
     "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint .",
-    "start": "ember serve",
+    "sem": "yarn start-ember",
+    "start-ember": "ember serve",
+    "sel": "yarn start-electron-dev",
+    "sel-dist": "yarn start-electron-dist",
+    "start-electron-dev": "set SYAA_MODE=dev && electron .",
+    "start-electron-dist": "electron . --",
     "test": "ember test"
   },
   "devDependencies": {
@@ -22,6 +37,8 @@
     "@ember/optional-features": "^0.6.3",
     "broccoli-asset-rev": "^2.7.0",
     "electron": "^5.0.0",
+    "electron-packager": "^13.1.1",
+    "electron-winstaller": "^3.0.4",
     "ember-ajax": "^5.0.0",
     "ember-cli": "~3.9.0",
     "ember-cli-app-version": "^3.2.0",
@@ -31,6 +48,7 @@
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-inject-live-reload": "^1.8.2",
+    "ember-cli-sass": "^10.0.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
@@ -43,7 +61,8 @@
     "ember-source": "~3.9.0",
     "eslint-plugin-ember": "^5.2.0",
     "loader.js": "^4.7.0",
-    "qunit-dom": "^0.8.0"
+    "qunit-dom": "^0.8.0",
+    "sass": "^1.19.0"
   },
   "engines": {
     "node": "6.* || 8.* || >= 10.*"
