--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "start-ember": "ember serve",
     "sel": "yarn start-electron-dev",
     "sel-dist": "yarn start-electron-dist",
-    "start-electron-dev": "set SYAA_MODE=dev && electron .",
+    "start-electron-dev": "set SYAA_MODE=dev&& electron .",
     "start-electron-dist": "electron . --",
     "test": "ember test"
   },
@@ -40,6 +40,7 @@
     "electron-packager": "^13.1.1",
     "electron-winstaller": "^3.0.4",
     "ember-ajax": "^5.0.0",
+    "ember-auto-import": "^1.3.0",
     "ember-cli": "~3.9.0",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.1.2",
@@ -59,10 +60,17 @@
     "ember-qunit": "^3.4.1",
     "ember-resolver": "^5.0.1",
     "ember-source": "~3.9.0",
+    "eslint-config-standard": "^12.0.0",
     "eslint-plugin-ember": "^5.2.0",
+    "eslint-plugin-es": "^1.4.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0",
     "loader.js": "^4.7.0",
     "qunit-dom": "^0.8.0",
-    "sass": "^1.19.0"
+    "sass": "^1.19.0",
+    "socket.io": "^2.2.0"
   },
   "engines": {
     "node": "6.* || 8.* || >= 10.*"
