--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "author": "Jio <jio@widh.me>",
   "main": "syaa.js",
   "directories": {
-    "doc": "doc",
     "test": "tests"
   },
   "scripts": {
@@ -60,6 +59,7 @@
     "ember-qunit": "^3.4.1",
     "ember-resolver": "^5.0.1",
     "ember-source": "~3.9.0",
+    "ember-uikit": "^0.7.4",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-ember": "^5.2.0",
     "eslint-plugin-es": "^1.4.0",
