--- a/package.json
+++ b/package.json
@@ -31,6 +31,13 @@
     "start-electron-dist": "electron . --",
     "test": "ember test"
   },
+  "build": {
+    "appId": "me.widh.syaa",
+    "productName": "Syaa",
+    "publish": [{
+      
+    }]
+  },
   "devDependencies": {
     "@ember/jquery": "^0.5.2",
     "@ember/optional-features": "^0.6.3",
@@ -70,7 +77,7 @@
     "loader.js": "^4.7.0",
     "qunit-dom": "^0.8.0",
     "sass": "^1.19.0",
-    "socket.io": "^2.2.0"
+    "socket.io-client": "1.7.4"
   },
   "engines": {
     "node": "6.* || 8.* || >= 10.*"
