--- a/package.json
+++ b/package.json
@@ -1,85 +1,36 @@
 {
   "name": "15na-cli",
-  "version": "1.0.0",
-  "private": true,
-  "description": "Client for 15na: Syncope Alarm for Alones",
-  "repository": "https://github.com/widh/15na-cli.git",
-  "license": "MPL-2.0",
-  "author": "Jio <jio@widh.me>",
+  "version": "1.1.0",
+  "description": "IRONA Client: Fall alarm program",
   "main": "15na.js",
-  "directories": {
-    "test": "tests"
-  },
-  "scripts": {
-    "pack": "yarn pack-electron-all",
-    "pack-all": "electron-packager . 15na --all --overwrite --out ./out",
-    "pack-win": "electron-packager . 15na --platform=win32 --overwrite --out ./out",
-    "mi": "yarn make-installer",
-    "mi-all": "yarn make-installer-all",
-    "mi-win": "yarn make-installer-win",
-    "make-installer": "yarn make-installer-all",
-    "make-installer-all": "",
-    "make-installer-win": "",
-    "build": "ember build",
-    "lint:hbs": "ember-template-lint .",
-    "lint:js": "eslint .",
-    "sem": "yarn start-ember",
-    "start-ember": "ember serve",
-    "sel": "yarn start-electron-dev",
-    "sel-dist": "yarn start-electron-dist",
-    "start-electron-dev": "set 15na_MODE=dev&& electron .",
-    "start-electron-dist": "electron . --",
-    "test": "ember test"
-  },
+  "repository": "https://github.com/wldh-g/15na-cli.git",
+  "author": "Jio <jio@wldh.org>",
+  "license": "MPL-2.0",
+  "private": true,
   "build": {
-    "appId": "me.widh.15na",
-    "productName": "15na",
-    "publish": [{
-
-    }]
-  },
-  "devDependencies": {
-    "@ember/jquery": "^0.5.2",
-    "@ember/optional-features": "^0.6.3",
-    "broccoli-asset-rev": "^2.7.0",
-    "electron": "^5.0.0",
-    "electron-packager": "^13.1.1",
-    "electron-winstaller": "^3.0.4",
-    "ember-ajax": "^5.0.0",
-    "ember-auto-import": "^1.3.0",
-    "ember-cli": "~3.9.0",
-    "ember-cli-app-version": "^3.2.0",
-    "ember-cli-babel": "^7.1.2",
-    "ember-cli-dependency-checker": "^3.1.0",
-    "ember-cli-eslint": "^4.2.3",
-    "ember-cli-htmlbars": "^3.0.0",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
-    "ember-cli-inject-live-reload": "^1.8.2",
-    "ember-cli-sass": "^10.0.0",
-    "ember-cli-sri": "^2.1.1",
-    "ember-cli-template-lint": "^1.0.0-beta.1",
-    "ember-cli-uglify": "^2.1.0",
-    "ember-data": "~3.9.0",
-    "ember-export-application-global": "^2.0.0",
-    "ember-load-initializers": "^1.1.0",
-    "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-qunit": "^3.4.1",
-    "ember-resolver": "^5.0.1",
-    "ember-source": "~3.9.0",
-    "ember-uikit": "^0.7.4",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-ember": "^5.2.0",
-    "eslint-plugin-es": "^1.4.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "loader.js": "^4.7.0",
-    "qunit-dom": "^0.8.0",
-    "sass": "^1.19.0",
-    "socket.io-client": "1.7.4"
+    "appId": "org.wldh.15na",
+    "productName": "IRONA",
+    "publish": [
+      {}
+    ]
   },
   "engines": {
-    "node": "6.* || 8.* || >= 10.*"
+    "node": ">= 10.*"
+  },
+  "dependencies": {
+    "electron": "^7.1.2",
+    "electron-builder": "^21.2.0",
+    "eslint": "^6.7.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-app": "^6.0.3",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4",
+    "socket.io-client": "^1.7.4",
+    "eslint-config-airbnb": "^18.0.1"
   }
 }
