--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   "license": "MPL-2.0",
   "private": true,
   "scripts": {
-    "build-react": "set IRONA_MODE=prod&& webpack --config=./.webpack.js --mode=production",
-    "build-app": "",
-    "start-react": "set IRONA_MODE=dev&& webpack-dev-server --config=./.webpack.js --mode=development",
+    "build-web": "set IRONA_MODE=prod&& set BABEL_ENV=prod&& webpack --config=./.webpack.prod.js",
+    "start-web": "set IRONA_MODE=dev&& set BABEL_ENV=dev&& webpack-dev-server --config=./.webpack.dev.js",
     "start-app": "set IRONA_MODE=dev&& electron .",
+    "start-app-local": "set IRONA_MODE=prod&& electron .",
+    "build-app": "",
     "pack-app": ""
   },
   "build": {
@@ -26,30 +27,30 @@
   },
   "dependencies": {
     "@hot-loader/react-dom": "^16.11.0",
-    "@types/react": "^16.9.13",
-    "@types/react-dom": "^16.9.4",
     "@uifabric/icons": "^7.3.0",
     "electron": "^7.1.2",
-    "electron-builder": "^21.2.0",
+    "electron-json-storage": "^4.1.8",
     "office-ui-fabric-react": "^7.64.2",
-    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.18",
-    "react-redux": "^7.1.3",
-    "redux": "^4.0.4",
     "socket.io-client": "^1.7.4",
-    "typescript": "^3.7.2",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "webpack": "^4.41.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.4",
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
+    "@types/react": "^16.9.13",
+    "@types/react-css-modules": "^4.6.2",
+    "@types/react-dom": "^16.9.4",
+    "@typescript-eslint/eslint-plugin": "^2.9.0",
+    "@typescript-eslint/parser": "^2.9.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-react-css-modules": "^5.2.6",
     "css-loader": "^3.2.0",
+    "electron-builder": "^21.2.0",
     "eslint": "^6.7.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
@@ -58,8 +59,14 @@
     "eslint-plugin-react-app": "^6.0.3",
     "eslint-plugin-react-hooks": "^1.7.0",
     "node-sass": "^4.13.0",
+    "postcss-nested": "^4.2.1",
+    "postcss-scss": "^2.0.0",
     "sass-loader": "^8.0.0",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^1.0.0",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.2",
+    "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
   }
 }
