--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,8 @@
     "no-console": "off",
     "import/prefer-default-export": "off",
     "react/jsx-filename-extension": [1, {"extensions": [".jsx", ".tsx"]}],
-    "react/static-property-placement": "off"
+    "react/static-property-placement": "off",
+    "jsx-a11y/media-has-caption": "off"
   },
   "settings": {
     "import/resolver": {
